# pipecat-conversation-relay-transport

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
specs/: SPEC.md
src/pipecat_conversation_relay/: __init__.py  input_transport.py  output_transport.py  transport.py  twiml.py  types.py
tests/: conftest.py  test_callbacks.py  test_input_transport.py  test_integration.py  test_output_transport.py  test_pipeline_e2e.py  test_transport.py  test_twiml.py
